objects/SchoolSeminar__c.object
<CustomObject>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>定員数（人）</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charge__c</fullName>
        <label>受講料</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Days__c</fullName>
        <label>開催日数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>削除有無</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EntryDeadlineDateFormula__c</fullName>
        <formula>DATEVALUE(EntryDeadlineDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>申込締切日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EntryDeadlineDate__c</fullName>
        <label>申込締切日(旧)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EntryNum__c</fullName>
        <label>申込数（人）</label>
        <summaryForeignKey>SchoolSeminarEntry__c.SchoolSeminar__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GaitoModel__c</fullName>
        <label>該当機種</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KakuteiNum__c</fullName>
        <label>確定数（人）</label>
        <summaryFilterItems>
            <field>SchoolSeminarEntry__c.SankaJokyoKakutei1__c</field>
            <operation>equals</operation>
            <value>有</value>
        </summaryFilterItems>
        <summaryForeignKey>SchoolSeminarEntry__c.SchoolSeminar__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LastUpdateDateFormula__c</fullName>
        <formula>Datevalue(LastUpdateDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>最終更新日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastUpdateDate__c</fullName>
        <label>最終更新日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lecturer__c</fullName>
        <label>担当講師</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Place__c</fullName>
        <label>場所</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegistrationDateFormula__c</fullName>
        <formula>Datevalue(RegistrationDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>登録日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RegistrationDate__c</fullName>
        <label>登録日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SchoolSeminarCode__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>講習セミナーコード</label>
        <length>19</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SchoolSeminarType__c</fullName>
        <label>講習セミナー種別</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDateFormula__c</fullName>
        <formula>DATEVALUE(StartDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>開催開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>開催開始日(旧)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>状態</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UseField__c</fullName>
        <label>利用分野</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>講習会・セミナー情報</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SchoolSeminarCode__c</columns>
        <columns>Status__c</columns>
        <columns>StartDate__c</columns>
        <columns>LastUpdateDate__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>RegistrationDate__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>すべて</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>講習セミナー名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Read</sharingModel>
</CustomObject>